--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ h1::after {
 </head>
 <body>
     <div class="container">
-        <h1>RxExplorer</h1>
+        <h1>Lx Search f1</h1>
         <div class="filter-buttons">
             <button class="filter-btn" id="authorityBtn"><i class="fas fa-shield-alt"></i> Authority</button>
             <button class="filter-btn" id="classBtn"><i class="fas fa-pills"></i> Class</button>
